# demo

./: .gitignore  01_extract_hidden_states.py  01_extract_spectral_field.py  02_compute_metrics.py  02_lowrank_analysis.py  03_plot_figure_1.py  03_plot_results.py  04_comprehensive_viz.py  06_d_dynamics_analysis.py  08_step_vector_analysis.py  09_whiten_analysis.py  10_sample_and_extract.py  10b_reextract_vectors.py  11_within_problem_analysis.py  12_within_problem_probe.py  13_normalization_ablation.py  14_temporal_probe.py  15_direction_decomposition.py  16_fractional_emergence.py  17_sparse_probe.py  18_strengthen_signal.py  19_manifold_constraint.py  20_ensemble_detector.py  21_token_cloud_geometry.py  22_pairwise_probe.py  24_decouple_difficulty_failure.py  25_probe_interpret.py  26_comprehensive_stats.py  27_validate_mahal.py  28_set_geometry.py  28b_within_problem_geometry.py  30_difficulty_stratified.py  31_per_problem_record.py  32_error_structure.py  33_uncertainty_profile.py  34_token_uncertainty_profile.py  35_unify_uncertainty_geometry.py  36_dimension_signal.py  38_channel_correlation.py  CTG_DATA_PATHS.md  (+235 more)
reasoning_activation_divergence/: FULL_TENSOR_RIDGE_METHOD.md  HIDDEN_STATE_GEOMETRY_METHOD.md  README.md  REAL_RAW_RESIDUAL_METHOD.md  REFACTOR_PLAN.md  RUN_HIDDEN_GEOMETRY_REMOTE.md  RUN_RAW_REMOTE.md  pyproject.toml  run_hidden_geometry_remote.sh  run_raw_remote.sh
reasoning_activation_divergence/tests/: test_architecture.py  test_core.py  test_layer_time.py  test_layer_time_experiment.py  test_optional_dependencies.py  test_output_versioning.py  (+4 more)
(+583 files in other folders)
