[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "functional-divergence"
version = "0.1.0"
description = "Cross-fitted time-layer operator analysis of raw reasoning residual streams"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10", "matplotlib>=3.7"]

[project.optional-dependencies]
test = ["pytest>=8.0"]
legacy = ["scikit-learn>=1.3"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
